feat(schema): create Schema & Prop decorators

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "luren-schema",
   "version": "0.0.1",
   "description": "schema for luren",
-  "main": "main.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "repository": "https://github.com/vcwen/luren-schema.git",
   "author": "Vincent Wen <wenwei1202@gmail.com>",
   "license": "MIT",
