--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "luren-schema",
-  "version": "0.0.7",
+  "version": "0.0.7-5",
   "description": "schema for luren",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -19,6 +19,7 @@
     "jest": "^24.7.1",
     "mongodb": "^3.2.3",
     "ts-jest": "^24.0.2",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.4.5"
   }
 }
