--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "dependencies": {
     "ajv": "^6.10.2",
+    "coveralls": "^3.0.7",
     "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.11",
     "luxon": "^1.17.2",
