--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "jest": "^24.7.1",
     "mongodb": "^3.2.3",
     "ts-jest": "^24.0.2",
+    "ts-node": "^8.5.4",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.4.5"
+    "typescript": "^3.7.3"
   }
 }
