--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "ts-node": "^8.10.2",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.9.5"
+  },
+  "engines": {
+    "node": ">= 10"
   }
 }
